# TrendRadar

./: .env.example  .gitignore  README-CN.md  README-EN.md  README.md  digest_to_card.py  generate_digest.py  index.html  main.py  pyproject.toml  requirements.txt
config/: ai_environment_report_prompt.txt  ai_interests.txt  config.yaml  daily_digest.yaml  frequency_words.txt  source_tiers.yaml  timeline.yaml
docker/: Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py  scheduler_daemon.py
mcp_server/: server.py
scripts/: article_body_enricher.py  cards_common.py  daily_digest.sh  digest_postprocess.py  github_metadata_extractor.py  hn_metadata_extractor.py  image_extractor.py  notify_feishu.sh  notify_ntfy.sh  pubmed_enricher.py  reddit_comment_extractor.py  render_category.py  render_cover.py  style_samples.py  sync_bilibili.py  transcript_enricher.py  web_research_enrich.py
templates/: new_titles.html  report.html  stats.html
tests/: README.md  _bootstrap.py  test_alert_cooldown.py  test_analyzer_environment.py  test_base_notifier.py  test_batch.py  test_batch_full.py  test_config.py  test_config_and_prompt_files.py  test_config_json_safe.py  test_config_load.py  test_daily_digest.py  test_dashboard.py  test_email.py  test_evidence_labels.py  test_fetcher.py  test_formatter_environment.py  test_generate_digest.py  test_main.py  test_newsletter_ai_item.py  test_notifier_init.py  test_notifiers.py  test_records.py  test_rss_anthropic_html.py  test_rss_guid_migration.py  test_source_tier_resolver.py  test_system_version_resolution.py  test_telegram_access.py  test_telegram_alert_brief.py  (+3 more)
(+5193 files in other folders)
