[project]
name = "trendradar"
version = "3.5.0"
description = "TrendRadar - 多平台热点新闻聚合+AI分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "pydantic>=2.0,<3.0.0",
    "pydantic-settings>=2.0,<3.0.0",
    "Jinja2>=3.1.0,<4.0.0",
    "fastmcp>=2.12.0,<2.14.0",
    "websockets>=13.0,<14.0",
    "structlog>=24.1.0",
]

[project.scripts]
trendradar = "main:main"
trendradar-mcp = "mcp_server.server:run_server"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trendradar", "mcp_server"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
strict = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = [
    "output/",
    "templates/",
    "mcp_server/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=trendradar --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["trendradar"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "output/*",
    "templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
